# SilentLiving

./: .gitignore  README.md  build.gradle  local.properties
src/main/: AndroidManifest.xml
src/main/java/com/seetatech/silentliving/: AntiSpoofingComponent.java  LaunchAntiSpoofingActivity.java  SeetaApplication.java
src/main/java/com/seetatech/silentliving/camera/: CameraCallbacks.java  CameraPreview.java  CameraPreview2.java
src/main/java/com/seetatech/silentliving/config/: AppConfig.java
src/main/java/com/seetatech/silentliving/constants/: ErrorCode.java
src/main/java/com/seetatech/silentliving/mvp/: MainFragment.java  PresenterImpl.java  VerificationContract.java
src/main/java/com/seetatech/silentliving/mvp/exceptions/: CameraUnavailableException.java
src/main/java/com/seetatech/silentliving/utils/: CachedStatusAndImage.java  FileUtils.java
src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  com_seeta_sdk_FaceDetector.h  facedetector_java.cpp
src/main/jni/include/seeta/: FaceDetector.h
src/main/res/layout/: activity_launch.xml
src/main/res/layout-mdpi/: fragment_main.xml
src/main/res/values/: strings.xml  styles.xml
